--- a/styles.css
+++ b/styles.css
@@ -1,105 +1,98 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-.nav{
+
+.nav {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 15px 20px;
     color: #ebf6cc;
-    margin-top: 15px;
-    
 }
-.left{
+.left, .right {
     display: flex;
-    gap: 100px;
+    gap: 20px;
 }
-.right{
-    display: flex;
-    gap: 100px;
-}
-.whole{
+
+.whole {
     background-color: azure;
-    height: 100vh;
-    width:100vw ;
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
-    
+    padding: 20px;
+    min-height: 100vh;
 }
- .main{
-    width: 40%;
+
+.main {
+    min-height: 95vh; 
+    width: 100%;
+    max-width: 600px;
     background-color: aqua;
-    height: 95%;
-} 
-.header{
+    height: auto;
+}
+
+.header {
+    background-image: url('banner_chameleon.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 40px 20px;
+    text-align: center;
+    color: #ebf6cc;
+    height: 65vh; 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 65%;
-    width: 100%;
-    background-image: url('banner_chameleon.png');
-    /* background-size: 100% 100%; 
-    background-repeat: no-repeat; */
-    background-size: cover; /* Ensures the whole image is visible */
-    background-position: center;
-    background-repeat: no-repeat;
-    border:  1px solid 5px black;
 }
-.text{
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    color:#ebf6cc;
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-bottom: 20px;
-}
-.btext{
-    width: 160px; /* Adjust the width as needed */
-    margin: 0 auto; /* Centers the button */
-    display: block;
-    background-color: orangered;
-    border-radius: 15px;
-    height: 30px;
-   padding-top: 5px;
-}
-.footer{
-    height: 35%;
-    width: 100%;
-    background-color:#e8eec4;
-  
-   padding-left: 40px;
-   padding-top: 20px;
-   padding-bottom: 20px;
-   padding-right: 40px;
 
+.btext {
+    display: inline-block;
+    background-color: orangered;
+    padding: 10px 15px;
+    border-radius: 15px;
+    margin-top: 15px;
 }
-.sec_heading{
-    font-size: 1.8rem;
-    margin-left: 20px;
-    color:#495d3b;
+
+.footer {
+    background-color: #e8eec4;
+    padding: 20px;
+    text-align: center;
+    height: 35vh; 
 }
-.quereis{
+.quereis {
     display: flex;
-    justify-content: space-around;
-    gap: 20px;
     flex-wrap: wrap;
-    margin-top: 20px;
+    gap: 10px;
+    justify-content: center;
 }
-.box1{
+
+.box1 {
     display: flex;
-    padding: 10px;
     justify-content: space-between;
     align-items: center;
     background-color: #d4e1b3;
-    width: 40%;
-    height: 50px;
+    width: 100%;
+    max-width: 250px;
+    padding: 10px;
     border-radius: 10px;
-    color: #495d3b;
-    
+}
+
+@media (max-width: 768px) {
+    .nav {
+        flex-direction: column;
+        text-align: center;
+    }
+    .left, .right {
+        flex-direction: column;
+        gap: 10px;
+    }
+    .main {
+        width: 90%;
+    }
+    .quereis {
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
